# Copyright (c) 2023 Henrik Söderlund

cc_library(
    name = "motor_signal_agent_simulation",
    srcs = ["simulation/motor_signal_agent.cpp"],
    visibility = ["__subpackages__"],
    deps = [
        "//line_follower/blocks/motor:motor_model",
        "//line_follower/external/api:common",
        "//line_follower/external/api:logging_api",
        "//line_follower/external/api:motor_signal_agent_api",
        "//line_follower/external/types",
    ],
)

cc_library(
    name = "motor_signal_agent_hardware",
    srcs = [
        "hardware/interface/hardware_motor_interface.cpp",
        "hardware/motor_signal_agent.cpp",
    ],
    hdrs = ["hardware/interface/hardware_motor_interface.h"],
    visibility = ["__subpackages__"],
    deps = [
        "//line_follower/deployment/arduino:api",
        "//line_follower/external/api:common",
        "//line_follower/external/api:logging_api",
        "//line_follower/external/api:motor_interface",
        "//line_follower/external/api:motor_signal_agent_api",
        "//line_follower/external/types",
    ],
)

cc_library(
    name = "motor_signal_agent_stub",
    srcs = ["stub/motor_signal_agent.cpp"],
    visibility = ["__subpackages__"],
    deps = [
        "//line_follower/external/api:common",
        "//line_follower/external/api:logging_api",
        "//line_follower/external/api:motor_signal_agent_api",
        "//line_follower/external/types",
    ],
)

alias(
    name = "motor_signal_agent",
    actual = select({
        "//bazel/flags/agents:simulation": ":motor_signal_agent_simulation",
        "//bazel/flags/agents:hardware": ":motor_signal_agent_hardware",
        "//bazel/flags/agents:stub": ":motor_signal_agent_stub",
        "//conditions:default": ":motor_signal_agent_simulation",
    }),
    visibility = ["//visibility:public"],
)
