# Copyright (c) 2023 Henrik Söderlund

cc_library(
    name = "scheduler_agent_api",
    hdrs = ["scheduler_agent.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//line_follower/types",
        "//line_follower/service_agents/common",
    ],
)

cc_library(
    name = "scheduler_agent_simulation",
    srcs = ["simulation/scheduler_agent.cpp"],
    visibility = [":__subpackages__"],
    deps = [
        ":scheduler_agent_api",
        "//line_follower/types",
        "//line_follower/service_agents/common",
        "//line_follower/service_agents/time:time_agent",
    ],
)

cc_library(
    name = "scheduler_agent_hardware",
    srcs = ["hardware/scheduler_agent.cpp"],
    visibility = [":__subpackages__"],
    deps = [
        ":scheduler_agent_api",
        "//line_follower/types",
        "//line_follower/service_agents/common",
        "//line_follower/service_agents/time:time_agent",
    ],
)

cc_library(
    name = "scheduler_agent_stub",
    srcs = ["stub/scheduler_agent.cpp"],
    visibility = [":__subpackages__"],
    deps = [
        ":scheduler_agent_api",
        "//line_follower/types",
        "//line_follower/service_agents/common",
        "//line_follower/service_agents/time:time_agent",
    ],
)

alias(
    name = "scheduler_agent",
    visibility = ["//visibility:public"],
    actual = select({
        "//bazel/flags/agents:simulation": ":scheduler_agent_simulation",
        "//bazel/flags/agents:hardware": ":scheduler_agent_hardware",
        "//bazel/flags/agents:stub": ":scheduler_agent_stub",
        "//conditions:default": ":scheduler_agent_simulation",
    }),
)
