# Copyright (c) 2023 Henrik Söderlund

cc_library(
    name = "scheduler_agent_simulation",
    srcs = ["simulation/scheduler_agent.cpp"],
    visibility = ["__subpackages__"],
    deps = [
        "//line_follower/blocks/utilities:should_exit",
        "//line_follower/external/api:common",
        "//line_follower/external/api:scheduler_agent_api",
        "//line_follower/external/types",
        "//line_follower/service_agents/time:time_agent",
    ],
)

cc_library(
    name = "scheduler_agent_hardware",
    srcs = ["hardware/scheduler_agent.cpp"],
    visibility = ["__subpackages__"],
    deps = [
        "//line_follower/external/api:common",
        "//line_follower/external/api:scheduler_agent_api",
        "//line_follower/external/types",
        "//line_follower/service_agents/time:time_agent",
    ],
)

alias(
    name = "scheduler_agent",
    actual = select({
        "//bazel/flags/agents:simulation": ":scheduler_agent_simulation",
        "//bazel/flags/agents:hardware": ":scheduler_agent_hardware",
        "//bazel/flags/agents:stub": ":scheduler_agent_simulation",
        "//conditions:default": ":scheduler_agent_simulation",
    }),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "schedulable_base",
    hdrs = ["schedulable_base.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":scheduler_agent",
    ],
)
