# Copyright (c) 2023 Henrik Söderlund

cc_library(
    name = "time_agent_simulation",
    srcs = ["simulation/time_agent.cpp"],
    visibility = ["__subpackages__"],
    deps = [
        "//line_follower/external/api:time_agent_api",
        "//line_follower/external/types",
    ],
)

cc_library(
    name = "time_agent_hardware",
    srcs = ["hardware/time_agent.cpp"],
    visibility = ["__subpackages__"],
    deps = [
        "//line_follower/deployment/arduino:api",
        "//line_follower/external/api:time_agent_api",
        "//line_follower/external/types",
    ],
)

alias(
    name = "time_agent",
    actual = select({
        "//bazel/flags/agents:simulation": ":time_agent_simulation",
        "//bazel/flags/agents:hardware": ":time_agent_hardware",
        "//bazel/flags/agents:stub": ":time_agent_simulation",
        "//conditions:default": ":time_agent_simulation",
    }),
    visibility = ["//visibility:public"],
)
