# Copyright (c) 2023 Henrik Söderlund

load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "time_agent_simulation",
    srcs = ["simulation/time_agent.cpp"],
    hdrs = ["simulation/simulation_clock.h"],
    visibility = ["__subpackages__"],
    deps = [
        "//line_follower/external/api:time_agent_api",
        "//line_follower/external/types",
    ],
)

# Exposes the virtual-clock API (simulation_clock.h) with public visibility so
# the simulator binary can call advance_simulation_clock() from its main loop.
cc_library(
    name = "simulation_clock",
    hdrs = ["simulation/simulation_clock.h"],
    visibility = ["//visibility:public"],
    deps = [":time_agent_simulation"],
)

cc_library(
    name = "time_agent_hardware",
    srcs = ["hardware/time_agent.cpp"],
    visibility = ["__subpackages__"],
    deps = [
        "//line_follower/deployment/arduino:api",
        "//line_follower/external/api:time_agent_api",
        "//line_follower/external/types",
    ],
)

alias(
    name = "time_agent",
    actual = select({
        "//bazel/flags/agents:simulation": ":time_agent_simulation",
        "//bazel/flags/agents:hardware": ":time_agent_hardware",
        "//bazel/flags/agents:stub": ":time_agent_simulation",
        "//conditions:default": ":time_agent_simulation",
    }),
    visibility = ["//visibility:public"],
)
