# Copyright (c) 2024 Henrik Söderlund

cc_test(
    name = "test",
    size = "small",
    srcs = ["test_dead_reckoning_model.cpp"],
    deps = [
        "//line_follower/blocks/dead_reckoning:dead_reckoning_model",
        "//line_follower/types",
        "@com_google_googletest//:gtest_main",
    ],
)
