# Copyright (c) 2024 Henrik Söderlund

load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_test(
    name = "test",
    size = "small",
    srcs = ["test_dead_reckoning_model.cpp"],
    deps = [
        "//line_follower/blocks/common",
        "//line_follower/blocks/dead_reckoning:dead_reckoning_model",
        "//line_follower/external/types",
        "@com_google_googletest//:gtest_main",
    ],
)
