# Copyright (c) 2024 Henrik Söderlund

load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_test(
    name = "test",
    size = "small",
    srcs = ["test_encoder_model.cpp"],
    deps = [
        "//line_follower/blocks/encoder:encoder_model",
        "//line_follower/external/types",
        "@com_google_googletest//:gtest_main",
    ],
)
