# Copyright (c) 2024 Henrik Söderlund

cc_test(
    name = "test",
    size = "small",
    srcs = ["test_ir_sensor_array_model.cpp"],
    deps = [
        "//line_follower/blocks/common",
        "//line_follower/blocks/ir_sensor_array:ir_sensor_array_model",
        "//line_follower/external/types",
        "@com_google_googletest//:gtest_main",
    ],
)
