# Copyright (c) 2023 Henrik Söderlund

load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_test(
    name = "test",
    size = "small",
    srcs = ["test_motor_model.cpp"],
    deps = [
        "//line_follower/blocks/motor:motor_model",
        "//line_follower/external/types",
        "@com_google_googletest//:gtest_main",
    ],
)
