# Copyright (c) 2024 Henrik Söderlund

load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_test(
    name = "test",
    size = "small",
    srcs = ["test_pid.cpp"],
    deps = [
        "//line_follower/blocks/pid",
        "//line_follower/external/types",
        "@com_google_googletest//:gtest_main",
    ],
)
