# Copyright (c) 2023 Henrik Söderlund

load("@rules_cc//cc:cc_test.bzl", "cc_test")

filegroup(
    name = "test_data",
    srcs = glob([
        "data/*.json",
    ]),
)

cc_test(
    name = "test",
    size = "small",
    srcs = ["test_track_loader.cpp"],
    data = [
        ":test_data",
    ],
    deps = [
        "//line_follower/blocks/utilities:track_loader",
        "@bazel_tools//tools/cpp/runfiles",
        "@com_google_googletest//:gtest_main",
    ],
)
